<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros_mqtt_bridge_node</name>
  <version>0.0.1</version>
  <description>ROS2 to MQTT Bridge Node</description>
  <maintainer email="26091004662@qq.com">Nolen Hsu</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <exec_depend>python3-paho-mqtt</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>python3-ament-index</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
